--- a/零拷贝的实现原理.md
+++ b/零拷贝的实现原理.md
@@ -12,6 +12,7 @@
 4. send()  调用返回，引发第四次的**上下文切换**，同时进行第四次的数据拷贝，通过 DMA 把数据从目标套接字相关的缓存区传到协议引擎进行发送。
 
 在整个过程中，过程1和4是由DMA负责，并不会消耗CPU，只有过程2和3的拷贝需要CPU参与。
+硬件和软件之间的数据传输可以通过使用 DMA 来进行，DMA 进行数据传输的过程中几乎不需要 CPU 参与。
 
 #### 优化一：内核态缓存冲区数据直接拷贝到套接字相关的缓存区
 
@@ -40,3 +41,17 @@ public void transferTo(long position, long count, WritableByteChannel target);
 
 - transferTo() 方法引发 DMA 将文件内容拷贝到内核读取缓冲区。
 - 把包含数据位置和长度信息的描述符追加到套接字缓冲区，避免了内容整体的拷贝，DMA 引擎直接把数据从内核缓冲区传到协议引擎，从而消除了最后一次 CPU参与的拷贝动作。
+
+#### Linux 中的零拷贝技术主要有下面这几种：
+
+​	直接 I/O：
+
+对于这种数据传输方式来说，应用程序可以直接访问硬件存储，操作系统内核只是辅助数据传输：这类零拷贝技术针对的是操作系统内核并不需要对数据进行直接处理的情况，数据可以在应用程序地址空间的缓冲区和磁盘之间直接进行传输，完全不需要 Linux 操作系统内核提供的页缓存的支持。
+
+​	在数据传输的过程中，避免数据在操作系统内核地址空间的缓冲区和用户应用程序地址空间的缓冲区之间进行拷贝：
+
+有的时候，应用程序在数据进行传输的过程中不需要对数据进行访问，那么，将数据从 Linux 的页缓存拷贝到用户进程的缓冲区中就可以完全避免，传输的数据在页缓存中就可以得到处理。在某些特殊的情况下，这种零拷贝技术可以获得较好的性能。Linux 中提供类似的系统调用主要有 mmap()，sendfile() 以及 splice()。
+
+​	对数据在 Linux 的页缓存和用户进程的缓冲区之间的传输过程进行优化：
+
+该零拷贝技术侧重于灵活地处理数据在用户进程的缓冲区和操作系统的页缓存之间的拷贝操作。这种方法延续了传统的通信方式，但是更加灵活。在Linux中，该方法主要利用了写时复制技术。
