--- a/类实例化顺序与类加载机制.md
+++ b/类实例化顺序与类加载机制.md
@@ -1,5 +1,9 @@
 ## 类的实例化顺序及类加载机制
 
+final 修饰的非静态全局变量只能通过直接赋值、构造函数中赋值、代码块{}中赋值三种方式赋值，且必须要赋值。
+
+final 修饰的静态全局常亮不能通过构造函数赋值，因为静态常亮优先于构造函数初始化，只能通过直接赋值、静态代码块中赋值。
+
 ### 1、类的实例化顺序（静态变量—>静态初始化块—>变量—>初始化块—>构造器）
 
 其中，后三者是在调构造器时执行的。示例代码如下：
