--- a/线程池.md
+++ b/线程池.md
@@ -224,10 +224,9 @@ private boolean addWorker(Runnable firstTask, boolean core) {
               // 不包含RUNNING，因为RUNNING是负数）
               // 
               // !(rs == SHUTDOWN &&  firstTask == null && !workQueue.isEmpty()) 相当于：
-              // (rs != SHUTDOWN &&     -----a•当前线程池状态为 STOP 、 TIDYING 或 TERMINATED
-                  //   firstTask != null &&    -----b•当前线程池状态为 SHUTDOWN 并且己经有了第一个任务
-                  //     workQueue.isEmpty())    -----c•当前线程池状态为 SHUTDOWN 并且任务队列为空
-                  // 
+              // (rs != SHUTDOWN ||     -----a•当前线程池状态为 STOP 、 TIDYING 或 TERMINATED
+              //   firstTask != null ||    -----b•当前线程池状态为 SHUTDOWN 并且己经有了第一个任务
+              //     workQueue.isEmpty())    -----c•当前线程池状态为 SHUTDOWN 并且任务队列为空
               // 所以该处判断为true的情况包括：a.b.c
               if (rs >= SHUTDOWN && 
                 !(rs == SHUTDOWN &&
