--- a/类实例化顺序与类加载机制.md
+++ b/类实例化顺序与类加载机制.md
@@ -38,17 +38,27 @@ public class OrderInLoadTestDemo {
 
 ### 2、子类与父类的实例化顺序
 
-​			父类--静态变量
-​			父类--静态初始化块
-​			子类--静态变量
-​			子类--静态初始化块
-​			子类main方法
-​			父类--变量
-​			父类--初始化块
-​			父类--构造器
-​			子类--变量
-​			子类--初始化块
-​			子类--构造器
+父类--静态变量
+
+父类--静态初始化块
+
+子类--静态变量
+
+子类--静态初始化块
+
+子类main方法
+
+父类--变量
+
+父类--初始化块
+
+父类--构造器
+
+子类--变量
+
+子类--初始化块
+
+子类--构造器
 
 **分析：**
 
